# TermOx

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.old.txt  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.txt  README.md  clear_screen  event.cpp  event.hpp  include_stats.txt  issues.txt
demos/: .gitmodules  CMakeLists.txt  animation_demo.hpp  color_sliders.hpp  demo.cpp  demo.main.cpp  demo_menu.hpp  demos.hpp  focus_demo.hpp  layout_demo.hpp  list_demo.cpp  main_menu.cpp  main_menu.hpp  menu_demo.cpp  notepad.cpp  notepad.hpp  notepad_demo.cpp  palette_creator.hpp  palette_view.hpp  readme.main.cpp  stack_demo.cpp  two_lists.hpp
demos/animation/: animated_widget.cpp  animated_widget.hpp  animation_demo.hpp  main.cpp
demos/colors/: palette_view.hpp
demos/composites/: composites.hpp
demos/focus/: focus_base.cpp  focus_base.hpp  focus_demo.hpp  focus_widgets.hpp
demos/fractal/: float_t.hpp  fractal_demo.cpp  fractal_demo.hpp  julia.hpp  mandelbrot.hpp  square_sum.hpp
demos/game_of_life/: bitmap.cpp  bitmap.hpp  bitset.hpp  cell.hpp  colors.hpp  controls_box.hpp  coordinate.hpp  coordinates.hpp  examples_info_box.cpp  examples_info_box.hpp  exporters.cpp  exporters.hpp  files_box.cpp  files_box.hpp  filetype.cpp  filetype.hpp  game_of_life_engine.cpp  game_of_life_engine.hpp  get_life_1_05.cpp  get_life_1_05.hpp  get_life_1_06.cpp  get_life_1_06.hpp  get_plaintext.cpp  get_plaintext.hpp  get_rle.cpp  get_rle.hpp  gol_demo.cpp  gol_demo.hpp  gol_widget.cpp  gol_widget.hpp  importers.cpp  importers.hpp  make_break.hpp  offset_control_widget.cpp  offset_control_widget.hpp  pattern.hpp  pattern_store.hpp  patterns.cpp  patterns.hpp  patterns_rulesets_box.hpp  (+8 more)
demos/glyph_paint/: attribute_box.cpp  attribute_box.hpp  glyph_paint.cpp  glyph_paint.hpp  glyph_select.cpp  glyph_select.hpp  glyph_select_stack.cpp  glyph_select_stack.hpp  glyph_selector.cpp  glyph_selector.hpp  options_box.cpp  options_box.hpp  paint_area.cpp  paint_area.hpp  populated_glyph_stack.cpp  populated_glyph_stack.hpp  side_pane.cpp  side_pane.hpp  trait_box.hpp
demos/graph/: graph_demo.cpp  graph_demo.hpp
demos/layout/: layout_demo.hpp
demos/notepad/: notepad.cpp  notepad.hpp
demos/palette/: all_colors_display.cpp  all_colors_display.hpp  color_control.cpp  color_control.hpp  color_definition_setter.cpp  color_definition_setter.hpp  color_display.cpp  color_display.hpp  export_panel.cpp  export_panel.hpp  palette_demo.cpp  palette_demo.hpp  palette_helpers.cpp  palette_helpers.hpp  value_control.cpp  value_control.hpp
demos/snake/: snake.cpp  snake.hpp
examples/: CMakeLists.txt  accumulator.cpp  bmp_view.cpp  pinbox.cpp  pong.cpp  scratch.cpp  snake.cpp  widgets.cpp  widgets.recycle_me.cpp  widgets_2.cpp  widgets_static.cpp
libs/Optional/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
libs/Signals/: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  align.cpp  application.cpp  border.cpp  bordered.cpp  button.cpp  checkbox.cpp  common.cpp  datatable.cpp  focus.cpp  label.cpp  layout.cpp  lineedit.cpp  pixel_grid.cpp  pixelgrid.cpp  put.cpp  radiogroup.cpp  scrollbar.cpp  terminal.cpp  text_box.cpp  textbox.cpp  timer.cpp  widget.cpp
src/CPPurses/: CMakeLists.txt
src/common/: mb_to_u32.cpp  timer.cpp
src/core/: terminal.cpp
src/painter/: add_default_attributes.cpp  brush.cpp  color.cpp  dynamic_colors.cpp  extended_char.cpp  find_empty_space.cpp  flush.cpp  flush.cpp.old  geometry.cpp  geometry.del.cpp  glyph.cpp  glyph_matrix.cpp  glyph_string.cpp  is_not_paintable.cpp  ncurses_data.cpp  ncurses_data.cpp.old  ncurses_paint_engine.cpp  ncurses_paint_engine.cpp.old  paint_buffer.cpp  paint_engine.cpp  paint_middleman.cpp  painter.cpp  palette.cpp  palettes.cpp  screen.cpp  screen_mask.cpp  screen_state.cpp  wchar_to_bytes.cpp
src/painter_module/: DELETE_CMAKEcanvas.cpp  brush.cpp  canvas.cpp  geometry.cpp  glyph.cpp  glyph_matrix.cpp  glyph_string.cpp  ncurses_paint_engine.cpp  paint_buffer.cpp  paint_engine.cpp  painter.cpp  palette.cpp
src/signal_module/: connection.cpp  shared_connection_block.cpp  slot_base.cpp
src/system/: abstract_event_dispatcher.cpp  abstract_event_dispatcher.del.cpp  animation_engine.cpp  animation_event.cpp  animation_event_loop.cpp  async_trigger.cpp  child_event.cpp  chrono_duration_hash.cpp  clear_screen_event.cpp  close_event.cpp  deferred_delete_event.cpp  delete_event.cpp  disable_event.cpp  enable_event.cpp  event.cpp  event_as_string.cpp  event_handler.cpp  event_handler_slots.cpp  event_invoker.cpp  event_loop.cpp  event_queue.cpp  find_widget_at.cpp  focus.cpp  focus_event.cpp  fps_to_period.cpp  hide_event.cpp  key.cpp  key_event.cpp  keyboard.cpp  mouse.cpp  mouse_event.cpp  move_event.cpp  ncurses_event_dispatcher.cpp  ncurses_event_dispatcher.del.cpp  ncurses_event_listener.cpp  ncurses_event_listener.cpp.old  object.cpp  object.del.cpp  on_tree_event.cpp  paint_event.cpp  (+18 more)
src/system_module/: abstract_event_dispatcher.cpp  child_event.cpp  event.cpp  event_loop.cpp  move_event.cpp  ncurses_event_dispatcher.cpp  object.cpp  posted_event.cpp  posted_event_queue.cpp  resize_event.cpp  system.cpp  thread_data.cpp
src/terminal/: dynamic_color_engine.cpp  input.cpp  output.cpp  terminal.cpp
src/widget/: blank_height.cpp  blank_width.cpp  border.cpp  border_offset.cpp  checkbox.cpp  children_data.cpp  children_data.old.cpp  color_chooser.cpp  color_select.cpp  confirm_button.cpp  cursor.cpp  cursor_data.cpp  cycle_box.cpp  cycle_stack.cpp  fixed_height.cpp  fixed_width.cpp  glyph_select.cpp  glyph_select_stack.cpp  graph_tree.cpp  horizontal.cpp  horizontal_layout.cpp  label.cpp  (+37 more)
test/: CMakeLists.txt  widget_tester.cpp
tests/: CMakeLists.txt  application.test.cpp  canvas.unit.test.cpp  checkbox.test.cpp  checkbox.ui.test.cpp  events.test.cpp  glyph.test.cpp  glyph_string.test.cpp  glyph_string.unit.test.cpp  layout_sort.ui.test.cpp  line_edit.ui.test.cpp  passive.test.cpp  passive.ui.test.cpp  scratch.cpp  slider.ui.test.cpp  spinners.ui.test.cpp  terminal.test.cpp  unique_queue.unit.test.cpp
(+1038 files in other folders)
